syntax = "proto3"

package admin;

service AdminService {
    rpc getUsers (GetUsersRequest) return (GetUsersResponse);
    rpc updateUser (UpdateUserRequest) return (UpdateUserResponse);
    rpc deleteUser (DeleteUserRequest) return (DeleteUserResponse);
}

message User {
    string userId = 1;
    string name = 2;
    string email = 3;
    string image = 4;
}

message GetUsersRequest {}

message GetUsersResponse {
   repeated User users = 1;
   int32 status = 2;
   string msg = 3;
}

message UpdateUserRequest {
    string userId = 1;
    string name = 2;
    string email = 3;
    string image = 4;
}

message UpdateUserResponse {
    int32 status = 1;
    string msg = 2;
}

message DeleteUserRequest {
    string userId = 1;
}

message DeleteUserResponse {
    int32 status = 1;
    string msg = 2;
}