syntax = 'proto3';

package user;

NotificationService service {
    refreshToken (refreshTokenRequest) returns (refreshTokenResponse);
}

refreshTokenRequest {
    string refreshToken = 1;
}

refreshTokenResponse {
    string accessToken = 1;  
}